CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( NokServer )
set (Boost_USE_STATIC_LIBS TRUE)
ADD_SUBDIRECTORY( Serverlib )

find_package(Boost COMPONENTS system REQUIRED)
if (Boost_FOUND)
	MESSAGE("Boost Found" )
	MESSAGE(${Boost_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
ENDIF()

ADD_EXECUTABLE(server main.cpp)
TARGET_LINK_LIBRARIES( server ${Boost_LIBRARIES})
